--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
       <div id="root"></div>
-      <script src="food.jsx"></script>
+      <script src="food.js"></script>
       <script type="module" src="/src/index.jsx"></script>
 
       <!--<link rel="stylesheet" href="lib/bootstrap.5.1.1.min.css">
