--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <script src="food.js"></script>
       <script type="module" src="/src/index.jsx"></script>
 
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+      
       <!--<link rel="stylesheet" href="lib/bootstrap.5.1.1.min.css">
-      <script src="./lib/bootstrap.bundle.5.1.1.min.js"></script>-->
+    <script src="./lib/bootstrap.bundle.5.1.1.min.js"></script>-->
   </body>
 </html>
